# fjcpc-classroom-broadcast

./: .gitignore  Cargo.toml  LICENSE  README.md
configs/: student_config.json  teacher_config.toml
docs/: Requirements.md  UpdateUI.md
shared/: Cargo.toml
shared/src/: config.rs  lib.rs  logging.rs  message.rs  net.rs  util.rs
student/: Cargo.toml
student/src/: audio.rs  client.rs  files.rs  main.rs  screen.rs  video.rs
teacher/: Cargo.toml  build.rs  manifest.xml
teacher/src/: audio.rs  main.rs  screen.rs  server.rs  ui.rs
