[workspace]
members = ["teacher", "student", "shared"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "fs", "io-util", "io-std", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
bytes = "1"
thiserror = "1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
toml = "0.8"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.24", default-features = false, features = ["jpeg"] }
screenshots = "0.8"
minifb = "0.24"
cpal = "0.15"
native-windows-gui = "1.0"
rfd = "0.14"
