[package]
name = "teacher"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = []
ui = ["native-windows-gui", "rfd"]

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
image = { workspace = true }
parking_lot = { workspace = true }
screenshots = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { path = "../shared" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
cpal = { workspace = true }
native-windows-gui = { workspace = true, optional = true }
rfd = { workspace = true, optional = true }
